2010-03-02  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/OpenLayers/lib/*, 
	include/javascript/OpenLayers/news.txt, 
	include/javascript/OpenLayers/readme.txt,
	include/javascript/OpenLayers/repository-license.txt,
	include/javascript/OpenLayers/release-license.txt: delete unused files of
	OpenLayers lib.

2010-03-02  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/render_view.php: clean source code.

2010-03-02  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Added a missing break and remove debugging 
	code.

	* operation/gis_maps/render_view.php: Added code to render Gmap type of 
	maps.

2010-03-02  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: disabled the use of night version of
	Openlayers. Change the "refreshMapView" javascript to load the library of
	google maps with the api, and add function "refreshMapViewSecondStep"
	for asincrone call in "refreshMapView" when load map google.
	
	* include/javascript/openlayers.pandora.js: clean source code of
	"js_refreshParentLines" and add the test if the parent agent is in the
	map.
	
	* godmode/setup/gis_step_2.php: disabled the use of night version of
	Openlayers in function "printMap" and change the text of hierachy layer for
	better english text.

2010-03-02  Sancho Lerena <slerena@artica.es>

	* include/functions_reporting.php: Solved issue with several undefined
	vars.

	* include/functions_servers.php: Solved issue with several undefined
	vars. 

	* include/functions_config.php: Added metaconsola witch to readconfig.

	* include/config_process.php: Update build.. is YYMMDD !

	* include/functions_ui.php: Removed deprecated call to split and replaced
	by preg_split.

	* index.php: Activated developer mode.

	* operation/agentes/estado_monitores.php: Solved small problem with modules
	without history, filling missing column in table. Added headers

	* godmode/alerts/configure_alert_compound.php,