@@ -2,7 +2,7 @@
 
 // Pandora FMS - http://pandorafms.com
 // ==================================================
-// Copyright (c) 2005-2009 Artica Soluciones Tecnologicas
+// Copyright (c) 2005-2010 Artica Soluciones Tecnologicas
 // Please see http://pandorafms.org for full contribution list
 
 // This program is free software; you can redistribute it and/or
@@ -26,8 +26,7 @@ if (! give_acl ($config['id_user'], 0, "PM")) {
 }
 
 // Header
-print_page_header (__('Module management')." &raquo; ". __('Module component management'), "", false, "", true);
-
+print_page_header (__('Module management').' &raquo; '.__('Module component management'), "", false, "", true);
 
 require_once ('include/functions_network_components.php');
 
