@@ -2,7 +2,7 @@
 
 // Pandora FMS - http://pandorafms.com
 // ==================================================
-// Copyright (c) 2005-2009 Artica Soluciones Tecnologicas
+// Copyright (c) 2005-2010 Artica Soluciones Tecnologicas
 // Please see http://pandorafms.org for full contribution list
 
 // This program is free software; you can redistribute it and/or
@@ -18,8 +18,6 @@ require_once ('include/config.php');
 
 check_login ();
 
-echo "<h2>".__('Module management')." &raquo; ";
-echo __('Module component management')."</h2>";
 echo "<h3>".__('Plugin component').'</h3>';
 
 $data = array ();
