@@ -1,3 +1,9 @@
+2010-03-02  Raúl Mateos <raulofpandora@gmail.com>
+
+	* godmode/agentes/*.php, godmode/group/*.php, godmode/modules/*.php:
+	Updated year and headers in several files. Little by little I'll change
+	the rest...
+
 2010-03-02  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/javascript/OpenLayers/lib/*, 
